tenzir/bats/data/reference/pipelines_local/test_legacy_operator/step_00.ref
error: expected additional positional argument `definition`
 --> <input>:1:1
  |
1 | legacy
  | ^^^^^^ 
  |
  = usage: legacy definition:string
  = docs: https://docs.tenzir.com/tql2/operators/legacy